# abtop

./: AGENTS.md  CLAUDE.md  Cargo.toml  README.md  abtop-kimi-research-report.md  dist-workspace.toml
docs/: session-state-tracking-zh.md  session-state-tracking.md
scripts/: abtop-sse-client.py
src/: app.rs  config.rs  demo.rs  host_info.rs  lib.rs  locale.rs  main.rs  server.rs  setup.rs  sse_server.rs  theme.rs
src/collector/: claude.rs  codex.rs  kimi.rs  mcp.rs  mod.rs  opencode.rs  process.rs  rate_limit.rs
src/model/: session.rs
src/ui/: config.rs  context.rs  footer.rs  header.rs  help.rs  mcp.rs  mod.rs  ports.rs  projects.rs  quota.rs  sessions.rs  tokens.rs  view_menu.rs
