[package]
name = "abtop"
version = "0.4.8"
edition = "2021"
rust-version = "1.88"
description = "AI agent monitor for your terminal"
license = "MIT"
repository = "https://github.com/graykode/abtop"
homepage = "https://github.com/graykode/abtop"
keywords = ["tui", "monitor", "claude", "ai", "agent"]
categories = ["command-line-utilities"]
readme = "README.md"
authors = ["Tae Hwan Jung <nlkey2022@gmail.com>"]
exclude = ["assets/*", "assets/**/*"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3"

[target.'cfg(target_vendor = "apple")'.dependencies]
proc_pidinfo = "0.1"

[target.'cfg(target_os = "windows")'.dependencies]
sysinfo = "0.32"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
